--- a/Learn_Pandas.ipynb
+++ b/Learn_Pandas.ipynb
@@ -1687,113 +1687,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>price</th>\n",
-       "      <th>mainroad</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>26600000</td>\n",
-       "      <td>yesyes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>24500000</td>\n",
-       "      <td>yesyes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>24500000</td>\n",
-       "      <td>yesyes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>24430000</td>\n",
-       "      <td>yesyes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>22820000</td>\n",
-       "      <td>yesyes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>540</th>\n",
-       "      <td>3640000</td>\n",
-       "      <td>yesyes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>541</th>\n",
-       "      <td>3534300</td>\n",
-       "      <td>nono</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>542</th>\n",
-       "      <td>3500000</td>\n",
-       "      <td>yesyes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>543</th>\n",
-       "      <td>3500000</td>\n",
-       "      <td>nono</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>544</th>\n",
-       "      <td>3500000</td>\n",
-       "      <td>yesyes</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>545 rows × 2 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "        price mainroad\n",
-       "0    26600000   yesyes\n",
-       "1    24500000   yesyes\n",
-       "2    24500000   yesyes\n",
-       "3    24430000   yesyes\n",
-       "4    22820000   yesyes\n",
-       "..        ...      ...\n",
-       "540   3640000   yesyes\n",
-       "541   3534300     nono\n",
-       "542   3500000   yesyes\n",
-       "543   3500000     nono\n",
-       "544   3500000   yesyes\n",
-       "\n",
-       "[545 rows x 2 columns]"
+       "0      26600000\n",
+       "1      24500000\n",
+       "2      24500000\n",
+       "3      24430000\n",
+       "4      22820000\n",
+       "         ...   \n",
+       "540     3640000\n",
+       "541     3534300\n",
+       "542     3500000\n",
+       "543     3500000\n",
+       "544     3500000\n",
+       "Name: price, Length: 545, dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1829,10 +1743,13 @@
     "Mainroad_price[\"price\"].quantile() \n",
     "\n",
     "# Apply function to each object.\n",
-    "def double(integer):\n",
-    "    return 2*integer\n",
+    "def double(n):\n",
+    "    return 2*n\n",
     "\n",
-    "Mainroad_price.apply(double)"
+    "Mainroad_price.apply(double)\n",
+    "\n",
+    "#  since mainroad column should not update so\n",
+    "Mainroad_price['price'].apply(double)\n"
    ]
   },
   {
